# agorm

./: .gitignore  pyproject.toml
examples/: basic.py
src/agorm/: io.py
src/agorm/clients/openai/: agent.py  dissector.py
src/agorm/clients/openai_agents/: agent.py
src/agorm/clients/openai_agents/tools/: tool_router.py  tools.py
src/agorm/core/: io.py
src/agorm/core/interfaces/: __init__.py  i_mcp_router.py  iagorm.py  idissector.py
src/agorm/resources/: prompt.py  system_message_v2.xml
src/agorm/routers/: mcp_router.py
